<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Widget App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fnametext">First Name</string>
    <string name="lnametext">Last Name</string>
    <string name="emailtext">Email Address</string>
    <string name="phonetext">Phone Number</string>
    <string name="form_email">Email</string>
    <string name="hint_email">youremail@mail.com</string>
    <string name="form_fname">First Name</string>
    <string name="hint_fname">Caleb</string>
    <string name="form_lname">Last Name</string>
    <string name="hint_lname">Doe</string>
    <string name="delete_action_button">Delete</string>
    <string name="contact_user">Send Message</string>
    <string name="cancel_button">Cancel</string>
    <string name="button_save_user">Save Contact</string>
    <string name="add_button_text">Add Contact</string>
    <string name="hint_number">123-456-7890</string>
    <string name="form_phone">Phone Number</string>
    <string name="delete_confirm">Are you sure you want to delete</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>
